nextcloud/network-policy-nextcloud-allow-ingress-to-nginx-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-nginx-from-traefik
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      tier: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
